--- a/resources/sass/_admin.scss
+++ b/resources/sass/_admin.scss
@@ -9,7 +9,7 @@ main{
         margin: 20px 30px;
 
         nav{
-            padding: 10px 20px;
+            padding: 15px 20px;
             box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
             background-color: #fff;
             display: flex;
@@ -37,11 +37,12 @@ main{
                 align-items: center;
                 justify-content: flex-end;
 
-                ul.notifications{
+                .notifications{
                     list-style: none;
                     display: flex;
                     align-items: center;
                     margin-right: 15px;
+                    display: none;
 
                     li{
                         margin: 10px;
@@ -98,7 +99,7 @@ main{
                             border: 2px solid $inactive;
                         }
     
-                        h4{
+                        .username-info{
                             margin-right: 10px;
                             font-weight: 500;
                         }
@@ -526,6 +527,11 @@ main{
             grid-column-gap: 20px;
             grid-row-gap: 20px;
 
+            .card-name{
+                color: $default;
+                font-weight: 500;
+            }
+
             .reports-card{
                 grid-column: 1 / 3;
                 display: grid;
@@ -539,20 +545,15 @@ main{
                     border-radius: 4px;
                     background-color: #fff;
 
-                    h4{
-                        color: $default;
-                        font-weight: 500;
-                    }
-
                     .report-record{
                         display: flex;
                         align-items: center;
                         justify-content: space-between;
 
-                        h2{
+                        .card-total{
                             color: $toolbar;
-                            margin-right: 15px;
                             font-weight: 600;
+                            font-size: 1.8em;
                         }
 
                         .card-icon{
@@ -561,7 +562,7 @@ main{
                             display: flex;
                             align-items: center;
                             justify-content: center;
-                            padding: 10px;
+                            padding: 12px;
                         }
 
                         #sales-icon{
