--- a/resources/sass/_admin.scss
+++ b/resources/sass/_admin.scss
@@ -3,274 +3,17 @@ main{
     overflow-y: auto;
     overflow-x: hidden;
 
-    .header-content{
-        display: flex;
-        flex-direction: column;
-        margin: 20px 30px;
+    @import 'header';
 
-        nav{
-            padding: 15px 20px;
-            box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-            background-color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            border-radius: 4px;
+    @import 'breadcrumb';
 
-            .date-time{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                h5{
-                    font-size: .9em;
-                    font-weight: 500;
-                    color: $toolbar;
-                    margin: 0;
-                    padding: 0;
-                }
-            }
-
-            .user-profile{
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-
-                .notifications{
-                    list-style: none;
-                    display: flex;
-                    align-items: center;
-                    margin-right: 15px;
-                    display: none;
-
-                    li{
-                        margin: 10px;
-
-                        a{
-                            text-decoration: none;
-                            color: $toolbar;
-                            display: flex;
-                            justify-content: center;
-                            position: relative;
-
-                            .new-notifications{
-                                color: $red;
-                                font-size: .5em;
-                                position: aboslute;
-                                bottom: 0;
-                            }
-
-                            .feather{
-                                width: 20px;
-                                height: 20px;
-                            }
-
-                            &:active{
-                                color: $btn-primary;
-                            }
-                        }
-                    }
-                }
-
-                a.btn-dropdown{
-                    color: $toolbar;
-                    text-decoration: none;
-                    font-weight: 600;
-                    font-size: .9em;
-                    display: flex;
-                    align-items: center;
-
-                    .username{
-                        // margin-right: 10px;
-                        text-align: right;
-                        display: flex;
-                        align-items: center;
-                        overflow: hidden;
-
-                        .image-wrapper{
-                            border-radius: 50%;
-                            width: 34px;
-                            height: 34px;
-                            background-color: #eee;
-                            background-size: cover;
-                            background-position: center;
-                            overflow: hidden;
-                            border: 2px solid $inactive;
-                        }
-    
-                        .username-info{
-                            margin-right: 10px;
-                            font-weight: 500;
-                        }
-                    }
-
-                    #admin-arrow{
-                        transform: rotate(-90deg);
-                        transition: all .3s ease;
-                    }
-
-                    .arrow-focus{
-                        transform: rotate(0deg) !important;
-                        transition: all .3s ease;
-                    }                    
-                }
-
-                .admin-dropdown{
-                    z-index: 1;
-                    position: absolute;
-                    top: 60px;
-                    right: 15px;
-                    background-color: #fff;
-                    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-                    border-radius: 4px;
-                    list-style: none;
-                    overflow: hidden;
-                    max-height: 0;
-                    transition: all 0.4s ease;
-
-                    ul{
-                        list-style: none;
-                        
-                        li{
-                            display: flex;
-                            flex-direction: column;
-
-                            a{
-                                padding: 10px 20px;
-                                padding-right: 35px;
-                                text-decoration: none;
-                                color: $toolbar;
-                                font-weight: 500;
-                                font-size: .9em;
-                                display: flex;
-                                align-items: center;
-
-                                span{
-                                    margin-left: 10px;
-                                }
-
-                                &:hover{
-                                    background-color: $primary;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    .filter-content{
-        background-color: #fff;
-        box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-        border-radius: 4px;
-        overflow: hidden;
-        padding: 15px 20px;
-        margin: 20px 30px;
-
-        h3{
-            font-weight: 500;
-            color: $toolbar;
-        }
-    }
+    @import 'filters';
 
     .content{
         background-color: #fff;
         box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
         border-radius: 4px;
         overflow: hidden;
-
-        .filters{
-            display: flex;
-            align-items: center;
-            position: relative;
-            padding: 20px;
-
-            h2{
-                font-weight: 500;
-                color: $toolbar;
-            }
-
-            .add_link{
-                a{
-                    text-decoration: none;
-                    padding: 10px 20px;
-                    border-radius: 4px;
-                    background-color: $btn-add;
-                    box-shadow: 1px 3px 15px rgba(0,0,0,0.1);
-                    color: #fff;
-                    font-size: 0.9em;
-                    font-weight: 500;
-                    margin-right: 5px;
-
-                    &:active{
-                        background-color: #999;
-                    }
-                }
-            }
-
-            .row{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-
-                .selections,
-                #user-form{
-                    display: flex;
-                    align-items: center;
-                    margin-right: 20px;
-
-                    .btn-export{
-                        padding: 9px 20px;
-                        border: none;
-                        background-color: $default;
-                        color: #fff;
-                        font-family: $font-family;
-                        font-size: .9em;
-                        font-weight: 600;
-                        border-radius: 4px;
-                        cursor: pointer;
-                        outline: none;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-                        display: flex;
-                        justify-content: space-between;
-
-                        span{
-                            margin-right: 5px;
-                        }
-
-                        &:active{
-                            background-color: $toolbar;
-                            color: #fff;
-                        }
-                    }
-    
-                    p{
-                        font-size: .8em;
-                        font-weight: 500;
-                        color: #999;
-                        margin-right: 5px;
-                    }
-    
-                    select{
-                        border-radius: 4px;
-                        border: 1px solid #eee;
-                        color: #555;
-                        padding: 10px 15px;
-                        font-family: $font-family;
-                        font-size: .9em;
-                        outline: none;
-                        font-weight: 500;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-                    }
-
-                    &:last-child{
-                        margin-right: 0;
-                    }
-                }
-            }
-        }
 
         #myGrid{
             width: 100%;
