--- a/resources/sass/_auth.scss
+++ b/resources/sass/_auth.scss
@@ -122,6 +122,7 @@
                     color: $red;
                     font-size: .9em;
                     font-weight: 500;
+                    display: block !important;
                 }
 
                 input:required {
