--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -42,6 +42,7 @@
                 position: relative;
                 display: flex;
                 align-items: center;
+                background-color: #fff;
 
                 .awesome2{
                     font-size: .7em !important;
