--- a/resources/sass/_admin.scss
+++ b/resources/sass/_admin.scss
@@ -9,337 +9,11 @@ main{
 
     @import 'filters';
 
-    .content{
-        background-color: #fff;
-        box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-        border-radius: 4px;
-        overflow: hidden;
+    @import 'content';
 
-        #myGrid{
-            width: 100%;
-            height: 80vh;
-        }
+    @import 'dashboard';
 
-        .data-profile{
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-
-            .profile{
-                width: 36px;
-                height: 36px;
-                border-radius: 50%;
-                border: 2px solid #eee;
-            }
-
-            p{
-                color: $toolbar;
-                margin-left: 5px;
-            }
-
-            .user-status{
-                margin-left: 10px;
-                border-radius: 4px;
-                padding: 3px 7px;
-                display: flex;
-                align-items: center;
-
-                .circle{
-                    font-size: .5em;                                
-                }
-
-                .status-code{
-                    margin-left: 5px;
-                    font-size: .7em;
-                }
-            }
-
-            .status-online{
-                color: $green;
-            }
-
-            .status-idle{
-                color: $gold;
-            }
-
-            .status-offline{
-                color: $default;
-            }
-        }
-
-        .btn-edit,
-        .btn-remove{
-            width: 38px;
-            padding: 7px;
-            border-radius: 4px;
-            color: #fff;
-        }
-
-        .btn-edit{
-            background-color: $btn-primary;
-        }
-
-        .btn-remove{
-            background-color: $btn-remove;
-        }
-
-        .card-form{
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 1px 20px 35px rgba(0,0,0,0.1);
-            border-radius: 10px;
-            overflow: hidden;
-            text-align: left;
-
-            h5{
-                font-weight: 500;
-                color: $toolbar;
-            }
-
-            .input-group{
-                display: flex;
-                flex-direction: column;
-                margin-bottom: 20px;
-                text-align: left;
-
-                label{
-                    font-size: .8em;
-                    color: #999;
-                    font-weight: 500;
-                    margin-bottom: 5px;
-                }
-
-                .columns{
-                    display: grid;
-                    grid-template-columns: 75% 20% 5%;
-                    align-items: center;
-                    margin-bottom: 20px;
-
-                    .form-control{
-                        margin-right: 20px;
-                        flex: 0;
-
-                        &:last-child{
-                            margin-right: 0;
-                        }
-                    }
-
-                    .btn-minus,
-                    .btn-plus{
-                        border: none;
-                        outline: none;
-                        padding: 5px;
-                        border-radius: 4px;
-                        cursor: pointer;                        
-                        font-size: .9em;
-                        font-weight: 600;
-                        color: #fff;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
-
-                        &:active{
-                            background-color: $toolbar;
-                        }
-                    }
-
-                    .btn-minus{
-                        background-color: $red;
-                    }
-
-                    .btn-plus{
-                        background-color: $btn-primary;
-                        margin-left: 5px;
-                    }
-
-                    &:last-child{
-                        margin-bottom: 0;
-                    }
-                }
-
-                .form-control{
-                    outline: none;
-                    border-radius: 4px;
-                    border: 1px solid #ddd;
-                    font-weight: 500;
-                    font-size: .9em;
-                    transition: all 0.3s ease;
-                    resize: none;
-                    width: 100% !important;
-
-                    &:focus{
-                        border: 1px solid $btn-primary;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
-                    }
-                }
-
-                .form-control-color{
-                    outline: none;
-                    width: 100%;
-                    overflow: hidden;
-                    height: 30px;
-                    border-radius: 4px;
-                    border: none;
-                    background-color: #fcfcfc;
-                    padding: 5px;
-                    border: 1px solid #ddd;
-
-                    &:focus{
-                        border: 1px solid $btn-primary;
-                        background-color: #fff;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
-                    }
-                }
-
-                .invalid-feedback,
-                .messages{
-                    strong{
-                        color: $red;
-                        font-size: .9em;
-                        font-weight: 500;
-                    }
-                }
-            }
-
-            .actions{
-                margin-top: 15px;
-                text-align: right;
-
-                button, a{
-                    margin-right: 10px;
-                    padding: 10px 20px;
-                    border: none;
-                    outline: none;
-                    border-radius: 4px;
-                    font-family: $font-family;
-                    font-size: .9em;
-                    font-weight: 500;
-                    transition: all 0.4s ease;
-                    color: #fff;
-
-                    &:last-child{
-                        margin-right: 0;
-                    }
-                }
-
-                .btn-submit{
-                    background-color: $btn-primary;
-                }
-            }
-        }
-    }
-
-    .dashboard-container{        
-        .dashboard-cards{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 20px;
-            grid-column-gap: 20px;
-            grid-row-gap: 20px;
-
-            .card-name{
-                color: $default;
-                font-weight: 500;
-            }
-
-            .reports-card{
-                grid-column: 1 / 3;
-                display: grid;
-                grid-template-columns: repeat(4, 1fr);
-                grid-gap: 20px;
-
-                .reports{
-                    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-                    overflow: hidden;
-                    padding: 20px;
-                    border-radius: 4px;
-                    background-color: #fff;
-
-                    .report-record{
-                        display: flex;
-                        align-items: center;
-                        justify-content: space-between;
-
-                        .card-total{
-                            color: $toolbar;
-                            font-weight: 600;
-                            font-size: 1.8em;
-                        }
-
-                        .card-icon{
-                            background-color: #ddd;
-                            border-radius: 50%;
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
-                            padding: 12px;
-                        }
-
-                        #sales-icon{
-                            background-color: #00e39633;
-                            color: #00e396;
-                        }
-
-                        #expenses-icon{
-                            background-color: #ff456033;
-                            color: #ff4560;   
-                        }                        
-
-                        #order-icon{
-                            background-color: #feb01933;
-                            color: #feb019;
-                        }
-
-                        #customer-icon{
-                            background-color: #775dd033;
-                            color: #775dd0;
-                        }
-                    }
-
-                }
-            }
-
-            .exp-vs-sales{
-                box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-                overflow: hidden;
-                padding: 20px;
-                border-radius: 4px;
-                background-color: #fff;
-
-                h4{
-                    color: $default;
-                    font-weight: 500;
-                    margin-bottom: 15px;
-                }
-
-                #report-chart{
-                    height: auto;
-                }
-            }
-
-            .report-details{
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
-                grid-gap: 20px;
-
-                .details1,
-                .details2{
-                    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-                    overflow: hidden;
-                    padding: 20px;
-                    border-radius: 4px;
-                    background-color: #fff;
-                }
-
-                // .details1{
-                    
-                // }
-
-                // .details2{
-                    
-                // }
-            }
-        }
-    }
-
+    // this is in POS
     .dashboard-content{
         display: flex;
         overflow: hidden;
@@ -357,7 +31,7 @@ main{
                 display: flex;
                 flex-direction: column;
                 background-color: #fff;
-                box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+                box-shadow: $shadow;
                 border-radius: 4px;
                 margin-right: 20px;
 
@@ -398,7 +72,7 @@ main{
                         .btn-filter-focus{
                             background-color: $btn-primary;
                             color: #fff;
-                            box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                            box-shadow: $shadow;
 
                             &:hover{
                                 background-color: $btn-primary;
@@ -438,7 +112,7 @@ main{
 
                     &:focus-within{
                         border: 1px solid $btn-primary;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                        box-shadow: $shadow;
                         background-color: #fff;
                     }
                 }
@@ -456,7 +130,7 @@ main{
                     color: #fff;
                     font-family: $font-family;
                     background-color: $btn-primary;
-                    box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                    box-shadow: $shadow;
 
                     &:hover{
                         opacity: .9;
@@ -476,7 +150,7 @@ main{
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-start;
-                box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+                box-shadow: $shadow;
                 border-radius: 4px;
 
                 .add-link{
@@ -494,7 +168,7 @@ main{
                         font-size: 0.9em;
                         font-weight: 500;
                         text-align: center;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                        box-shadow: $shadow;
                         display: flex;
                         align-items: center;
                         justify-content: center;
@@ -568,7 +242,7 @@ main{
                     display: none;
 
                     .btn-remove-all{
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                        box-shadow: $shadow;
                         outline: none;
                         font-family: $font-family;
                         background-color: #fff;
@@ -715,7 +389,7 @@ main{
 
                             &:focus{
                                 border: 1px solid $btn-primary;
-                                box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                                box-shadow: $shadow;
                             }
                         }
 
@@ -792,7 +466,7 @@ main{
                         font-weight: 500;
                         cursor: pointer;
                         outline: none;
-                        box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+                        box-shadow: $shadow;
 
                         &:hover{
                             opacity: 0.8;
@@ -806,10 +480,9 @@ main{
             }
         }
     }
+    // Ends here
 
-    .customer-content{
-        @import 'my_account';
-    }
+    @import 'my_account';
 
     .modal{
         display: flex;
@@ -830,7 +503,7 @@ main{
             padding: 20px;
             background-color: #fff;
             border-radius: 4px;
-            box-shadow: 1px 1px 10px rgba(0,0,0,0.1);
+            box-shadow: $shadow;
             position: relative;
             overflow: hidden;
             width: 30%;
@@ -922,7 +595,7 @@ main{
                         .btn-upload{
                             border: none;
                             background-color: $btn-primary;
-                            box-shadow: 1px 3px 15px rgba(0,0,0,0.1);
+                            box-shadow: $shadow;
                             color: #fff;
                             outline: none;
                             padding: 10px 30px;
