--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -5,7 +5,7 @@
 
     nav{
         padding: 15px 20px;
-        box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+        box-shadow: $shadow;
         background-color: #fff;
         display: flex;
         justify-content: space-between;
@@ -117,9 +117,8 @@
                 top: 60px;
                 right: 15px;
                 background-color: #fff;
-                box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+                box-shadow: $shadow;
                 border-radius: 4px;
-                list-style: none;
                 overflow: hidden;
                 max-height: 0;
                 transition: all 0.4s ease;
